add integ test coverage for exp